infrastructure/kube/keep-dev/eth-miner-ropsten-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ropsten-miner
  namespace: default
spec:
  replicas: 1
  serviceName: ropsten-miner
  volumeClaimTemplates:
  - metadata:
      name: ropsten-miner
    spec:
      accessModes: [ReadWriteOnce]
      storageClassName: ropsten-miner
      resources:
        requests:
          storage: 500Gi
  selector:
    matchLabels:
      app: geth
      type: ropsten-miner
  template:
    metadata:
      labels:
        app: geth
        type: ropsten-miner
    spec:
      containers:
      - name: miner
        image: ethereum/client-go:v1.9.12
        ports:
          - containerPort: 8545
          - containerPort: 8546
          - containerPort: 30303
        volumeMounts:
          - name: ropsten-miner
            mountPath: /root/.ethereum
        args: ["--testnet", "--networkid=3", "--datadir=/root/.ethereum", "--syncmode=fast", "--rpc", "--rpcapi=eth,web3,net", "--rpcport=8545", "--rpcaddr=0.0.0.0", "--rpccorsdomain=\"\"", "--rpcvhosts=*", "--ws", "--wsapi=eth,web3,net", "--wsport=8546", "--wsaddr=0.0.0.0", "--wsorigins=*", --mine, --minerthreads=2, --miner.etherbase=0xF7886F29Ffc82D349E3a9131a463Ba0eD35b7C58]
      nodeSelector:
        pool-type: eth-ropsten
