infrastructure/kube/keep-dev/eth-tx-ropsten-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eth-tx
  namespace: ropsten
spec:
  replicas: 1
  serviceName: eth-tx
  volumeClaimTemplates:
  - metadata:
      name: eth-tx
    spec:
      accessModes: [ReadWriteOnce]
      storageClassName: eth-tx
      resources:
        requests:
          storage: 100Gi
  selector:
    matchLabels:
      app: geth
      type: tx
  template:
    metadata:
      labels:
        app: geth
        type: tx
    spec:
      containers:
      - name: tx
        image: ethereum/client-go:v1.9.9
        ports:
          - containerPort: 8545
          - containerPort: 8546
          - containerPort: 30303
        volumeMounts:
          - name: eth-tx
            mountPath: /root/.ethereum
        args: ["--testnet", "--networkid=3", "--datadir=/root/.ethereum", "--syncmode=fast", "--txpool.accountslots=128", "--txpool.accountqueue=512", "--whitelist=6485846=0x43f0cd1e5b1f9c4d5cda26c240b59ee4f1b510d0a185aa8fd476d091b0097a80", "--rpc", "--rpcapi=eth,web3,net", "--rpcport=8545", "--rpcaddr=0.0.0.0", "--rpccorsdomain=\"\"", "--rpcvhosts=*", "--ws", "--wsapi=eth,web3,net", "--wsport=8546", "--wsaddr=0.0.0.0", "--wsorigins=*"]
